objects/LLC_BI__Team_Key_Role__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the roles that should be included in a Team Alert.</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>Team Key Roles</relationshipLabel>
        <relationshipName>Team_Key_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Team_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the selected Team Alert that should be sent.</description>
        <label>Team Key</label>
        <referenceTo>LLC_BI__Team_Keys__c</referenceTo>
        <relationshipLabel>Team Key Roles</relationshipLabel>
        <relationshipName>Team_Key_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Key Role Association</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LLC_BI__Team_Key__c</columns>
        <columns>LLC_BI__Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKR-{0}</displayFormat>
        <label>Team Key Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Key Role Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>